[project]
name = "001-streamlit-redaction-improver-v1-master2"
version = "0.1.0"
description = ""
authors = [
    {name = "mihai32",email = "mihai32@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "lab (>=8.4,<9.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)"
]

[tool.poetry]
packages = [{include = "001_streamlit_redaction_improver_v1_master2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
